--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -27,6 +27,6 @@ input,
 button,
 textarea {
   font: 400 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Gothic A1', sans-serif;
   color: var(--color-text);
 }
