--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -56,6 +56,28 @@ textarea {
   background: var(--color-green);
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #636363;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-background);
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: var(--color-background);
+}
+
 @media (max-width: 1024px) {
   :root {
     font-size: 50%;
