--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,6 +46,17 @@ textarea {
   color: var(--color-text);
 }
 
+#top-line {
+  background: linear-gradient(45deg, #4000ff, #bf00ff, #ff00c0);
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 2px;
+}
+
 ::-moz-selection {
   color: var(--color-black);
   background: var(--color-green);
