--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,11 @@
 * {
   margin: 0;
   padding: 0;
+
+  font-size: 1.6rem;
+  font-family: 'Gothic A1', sans-serif;
+  color: var(--color-text);
+
   box-sizing: border-box;
 }
 
@@ -30,17 +35,13 @@ body,
   background-color: var(--color-background);
 }
 
-#root {
-  display: flex;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-body,
-input,
-button,
-textarea {
-  font: 400 1.6rem;
-  font-family: 'Gothic A1', sans-serif;
-  color: var(--color-text);
+#root {
+  display: flex;
 }
 
 #top-line {
