--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,7 +47,7 @@ a {
 #top-line {
   background: linear-gradient(45deg, #4000ff, #bf00ff, #ff00c0);
 
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 
