[REFACTOR] change colors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@ a {
 }
 
 #top-line {
-  background: linear-gradient(45deg, #4000ff, #bf00ff, #ff00c0);
+  background: linear-gradient(45deg, #4d19e6, #b219e6, #e619b3);
 
   position: fixed;
   top: 0;
